# llm-extract

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml  release.yml  test.yml
scripts/workflows/: compare_versions.py  extract_version.py  get_latest_version.sh
src/ai_extract/: __init__.py  cli.py  extractor.py  json_core.py  parser.py  types.py
src/llm_extract/: __init__.py  cli.py  parser.py  repair.py  types.py
tests/: __init__.py  test_cli.py  test_extractor.py  test_json_core.py  test_parser.py  test_repair.py  test_types.py
tests/fixtures/json/synthetic/: test_cases.json
tests/fixtures/real/: llm_outputs.json
tests/fixtures/synthetic/: test_cases.json
